add whisky menu

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
       </div>
       <div class="subBevAlc">
         <a href="#" class="cocktailOpen">Cocktails</a>
-        <a href="#" class="spritz">Spritz</a>
-        <a href="#" class="beer">Beer</a>
-        <a href="#" class="vodka">Vodka</a>
-        <a href="#" class="vodka">Wine</a>
+        <a href="#" class="whiskyOpen">Whisky</a>
+        <a href="#" class="beerOpen">Beer</a>
+        <a href="#" class="vodkaOpen">Vodka</a>
+        <a href="#" class="wineOpen">Wine</a>
       </div>
       <div class="listMenu">
         <!-- Food Menu -->
@@ -450,12 +450,14 @@
             <p>&nbsp;</p>
             <p>&nbsp;</p>
             <div class="subs">
-            <h2>Spritz Cocktails</h2>
-            <p>Luxury, power and class… What would be a celebration toast be
-              without a glass of Champagne cocktail’s ? A perfect drink to kick
-              off a party…</p>
+              <h2>Spritz Cocktails</h2>
+              <p>
+                Luxury, power and class… What would be a celebration toast be
+                without a glass of Champagne cocktail’s ? A perfect drink to
+                kick off a party…
+              </p>
             </div>
-              <p>&nbsp;</p>
+            <p>&nbsp;</p>
             <p>&nbsp;</p>
             <h3>Mandalika Summer Punch <span>195K</span></h3>
             <p>
@@ -479,14 +481,16 @@
             <p>&nbsp;</p>
             <p>&nbsp;</p>
             <div class="subs">
-            <h2>Raise A Glass To New Orleans</h2>
-            <p>New Orleans’ history of the cocktail can be traced back to its
-              beginning, when drinks were built simply from spirits, sugar,
-              water, and bitters. The city may not be the birthplace of the very
-              first cocktail, but it is where many of the most enduring drinks
-              were invented.</p>
+              <h2>Raise A Glass To New Orleans</h2>
+              <p>
+                New Orleans’ history of the cocktail can be traced back to its
+                beginning, when drinks were built simply from spirits, sugar,
+                water, and bitters. The city may not be the birthplace of the
+                very first cocktail, but it is where many of the most enduring
+                drinks were invented.
+              </p>
             </div>
-              <p>&nbsp;</p>
+            <p>&nbsp;</p>
             <p>&nbsp;</p>
             <h3>Raisin The Sazerac <span>195K</span></h3>
             <p>
@@ -512,12 +516,14 @@
             <p>&nbsp;</p>
             <p>&nbsp;</p>
             <div class="subs">
-            <h2>Noble Experiment Of Prohibition Era</h2>
-            <p>The greatest misconception is that Prohibition created cocktails.
-              In fact, most of the cocktails we consider "Prohibition era" were
-              probably created before Prohibition.</p>
+              <h2>Noble Experiment Of Prohibition Era</h2>
+              <p>
+                The greatest misconception is that Prohibition created
+                cocktails. In fact, most of the cocktails we consider
+                "Prohibition era" were probably created before Prohibition.
+              </p>
             </div>
-              <p>&nbsp;</p>
+            <p>&nbsp;</p>
             <p>&nbsp;</p>
             <h3>Savoury Mary Pickfor <span>195K</span></h3>
             <p>
@@ -549,20 +555,22 @@
             <p>&nbsp;</p>
             <p>&nbsp;</p>
             <div class="subs">
-            <h2>Forgotten Cocktails</h2>
-            <p>There are a ton of cocktails out there that bartenders are
-              underated, some are popular, and some are libations you’ve never
-              heard before. And while many old timey classic cocktails are now
-              experiencing a renaissance, there are still notable drinks that
-              have sadly been left in the dust</p>
+              <h2>Forgotten Cocktails</h2>
+              <p>
+                There are a ton of cocktails out there that bartenders are
+                underated, some are popular, and some are libations you’ve never
+                heard before. And while many old timey classic cocktails are now
+                experiencing a renaissance, there are still notable drinks that
+                have sadly been left in the dust
+              </p>
             </div>
-              <p>&nbsp;</p>
-              <p>&nbsp;</p>
-              <h3>Bramble <span>195K</span></h3>
-              <p>Fresh Lemon Juice | Sugar Syrup | Crème De Mure | Dry Gi</p>
-              <h3>Manhattan <span>195K</span></h3>
-              <p>Angostura Bitter | Sweet Vermouth | Rye Whiske</p>
-              <h3>Last Word <span>195K</span></h3>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <h3>Bramble <span>195K</span></h3>
+            <p>Fresh Lemon Juice | Sugar Syrup | Crème De Mure | Dry Gi</p>
+            <h3>Manhattan <span>195K</span></h3>
+            <p>Angostura Bitter | Sweet Vermouth | Rye Whiske</p>
+            <h3>Last Word <span>195K</span></h3>
             <p>
               Fresh Lime Juice | Green Chartreuse | Maraschino Liqueur | Dry Gin
             </p>
@@ -580,16 +588,16 @@
               Fresh Lime Juice | Pineapple Juice | Benedictine DOM | Cointreau |
               Cherry Heering | Dry Gin | Angostura Bitter | Soda Water
             </p>
-              <p>&nbsp;</p>
-              <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
             <div class="subs">
-            <h2>La Familiglia Negroni</span></h2>
-            <p>
-              The drink's origins are not known with certainty. The most widely
-              reported account is that it was first mixed in Florence, Italy, in
-              1919, at Caffè Casoni, on Via de’ Tornabuoni. There is still a
-              café in this location, the name change to Cafe Cavalli.
-            </p>
+              <h2>La Familiglia Negroni</h2>
+              <p>
+                The drink's origins are not known with certainty. The most
+                widely reported account is that it was first mixed in Florence,
+                Italy, in 1919, at Caffè Casoni, on Via de’ Tornabuoni. There is
+                still a café in this location, the name change to Cafe Cavalli.
+              </p>
             </div>
             <p>&nbsp;</p>
             <p>&nbsp;</p>
@@ -610,14 +618,14 @@
             <p>&nbsp;</p>
             <p>&nbsp;</p>
             <div class="subs">
-            <h2>Tiki Culture</h2>
-            <p>
-              Is a 20th-century theme used in Polynesian - style restaurants and
-              clubs originally in the United States and then, to a lesser
-              degree, around the world. Although inspired in part by tiki
-              carvings and mythology, the connection is loose and stylized,
-              being an American form and not a Polynesian fine art form.
-            </p>
+              <h2>Tiki Culture</h2>
+              <p>
+                Is a 20th-century theme used in Polynesian - style restaurants
+                and clubs originally in the United States and then, to a lesser
+                degree, around the world. Although inspired in part by tiki
+                carvings and mythology, the connection is loose and stylized,
+                being an American form and not a Polynesian fine art form.
+              </p>
             </div>
             <p>&nbsp;</p>
             <p>&nbsp;</p>
@@ -653,10 +661,162 @@
             <p class="tax">All prices are exclusive tax & service charge</p>
           </div>
         </div>
-        <div class="beer">
-            <div class="menu">
-
+        <div class="whisky">
+          <div class="menu">
+            <h1>Whisky</h1>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <div class="subs">
+              <h2>Single Malt Whisky</h2>
+              <p>
+                He Thought Me The Difference Between A Good Single Malt Scotch
+                Whisky And A Bad One. Catherine Zeta-Jones But There’s No such
+                Thing as Bad Whisky, Just Some Whiskies Happen To Be Better Than
+                Others. -William Faulkner-
+              </p>
             </div>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <div class="subs">
+              <h2>Highland Region</h2>
+            </div>
+            <h3>Singleton 12 yo <span>3000K</span></h3>
+            <p>By Bottle</p>
+            <h3>Singleton 12 yo <span>154k</span></h3>
+            <p>By Glass</p>
+            <h3>Glenmorangie 12 yo <span>5000K</span></h3>
+            <p>By Bottle</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <div class="subs">
+              <h2>Lowland Region</h2>
+            </div>
+            <h3>Auchentoshan 12 yo <span>4400k</span></h3>
+            <p>By Bottle</p>
+            <h3>Auchentoshan 12 yo <span>225K</span></h3>
+            <p>By Glass</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <div class="subs">
+              <h2>Speyside Region</h2>
+            </div>
+            <h3>Macalland 12 yo Sherry Oak <span>6800K</span></h3>
+            <p>By Bottle</p>
+            <h3>Macallan 12 yo Double Cask <span>6800K</span></h3>
+            <p>By Bottle</p>
+            <h3>Glenlivet 12 yo <span>3500k</span></h3>
+            <p>By Bottle</p>
+            <h3>Glenlivet 12 Yo <span>158K</span></h3>
+            <p>By Glass</p>
+            <h3>Glenfiddich 12 yo <span>3500K</span></h3>
+            <p>By Bottle</p>
+            <h3>Glenfiddich 12 yo <span>167K</span></h3>
+            <p>By Glass</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <div class="subs">
+              <h2>Islay Region</h2>
+            </div>
+            <h3>Bowmore 12 yo <span>5300K</span></h3>
+            <p>By Bottle</p>
+            <h3>Bowmore 12 yo <span>276K</span></h3>
+            <p>By Glass</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <div class="subs">
+              <h2>Whisky Blende Scotch</h2>
+              <p>
+                An Optimis sees The Glass As half full, whille the pessimist
+                sees the glass as half empty i see that there room in the glass
+                for more Blended Scocth
+              </p>
+            </div>
+            <h3>JW BLACK LABEL 12 yo <span>2600K</span></h3>
+            <p>By Bottle</p>
+            <h3>JW Black Label 12 Yo <span>125K</span></h3>
+            <p>By Glass</p>
+            <h3>JW Red Label <span>125K</span></h3>
+            <p>By Glass</p>
+            <h3>JW Double Black <span>1900K</span></h3>
+            <p>By Bottle</p>
+            <h3>Jw Double Black <span>150K</span></h3>
+            <p>By Glass</p>
+            <h3>Chivas Regal 12 yo <span>2300K</span></h3>
+            <p>By Bottle</p>
+            <h3>Chivas Regal 12 yo <span>120K</span></h3>
+            <p>By Glass</p>
+            <h3>Chivas Regal 18 yo <span> 4500K</span></h3>
+            <p>By Bottle</p>
+            <h3>Monkey Shoulder Blended malt <span>2700K</span></h3>
+            <p>By Bottle</p>
+            <h3>Monkey Shoulder Blended malt <span>140K</span></h3>
+            <p>By Glass</p>
+            <h3>Ballatine Finest <span>2100K</span></h3>
+            <p>By Bottle</p>
+            <h3>Ballatine Finest <span>105K</span></h3>
+            <p>By Glass</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <div class="subs">
+              <h2>Whiskey Haruki Murakami</h2>
+              <p>
+                Whiskey Has Killed More men than bullets But most Men Would
+                Rather Be Full Of whiskey Than Bullet Wubston churcil whiskey
+                Like A beautifuk Woman demand Apprection, you Gaze First Then
+                its time to Drink
+              </p>
+            </div>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <div class="subs">
+              <h2>Borbun</h2>
+            </div>
+            <h3>Jim Beam White <span>1900K</span></h3>
+            <p>By Bottle</p>
+            <h3>Maker's Mark <span>1900K</span></h3>
+            <p>By Bottle</p>
+            <h3>Maker's Mark <span>90K</span></h3>
+            <p>By Glass</p>
+            <h3>Wild Turkey 101 Proof <span>3200K</span></h3>
+            <p>By Bottle</p>
+            <div class="subs">
+              <h2>Rye</h2>
+            </div>
+            <h3>Bulleit Rye <span>2900K</span></h3>
+            <p>By Bottle</p>
+            <h3>Bulleit Rye <span>150K</span></h3>
+            <p>By Glass</p>
+            <div class="subs">
+              <h2>American Straight</h2>
+            </div>
+            <h3>Jack Daniel No.7 <span>2200K</span></h3>
+            <p>By Bottle</p>
+            <h3>Jack Daniel No.7 <span>115K</span></h3>
+            <p>By Glass</p>
+            <h3>Gentleman Jack <span>2800K</span></h3>
+            <p>By Bottle</p>
+            <div class="subs">
+              <h2>Irish</h2>
+            </div>
+            <h3>Jameson <span>2400K</span></h3>
+            <p>By Bottle</p>
+            <h3>Jameson <span>115K</span></h3>
+            <p>By Glass</p>
+            <div class="subs">
+              <h2>Japanese</h2>
+            </div>
+            <h3>Akashi-Red Blended Whiskey <span>1500K</span></h3>
+            <p>By Bottle</p>
+            <h3>Akashi-Red Blended Whiskey <span>105K</span></h3>
+            <p>By Glass</p>
+            <h3>Eigashima-Craft Japanese Whiskey <span>2500K</span></h3>
+            <p>By Bottle</p>
+            <h3>Tenjaku-Pure Malt Whiskey <span>3000K</span></h3>
+            <p>By Bottle</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p class="tax">All prices are exclusive tax & service charge</p>
+          </div>
         </div>
       </div>
     </div>
