Add beer vodka gin rum tequila menu

--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
         <a href="#" class="whiskyOpen">Whisky</a>
         <a href="#" class="beerOpen">Beer</a>
         <a href="#" class="vodkaOpen">Vodka</a>
-        <a href="#" class="wineOpen">Wine</a>
+        <a href="#" class="ginOpen">Gin</a>
+        <a href="#" class="rumOpen">Rum</a>
+        <a href="#" class="tequilaOpen">Tequila</a>
       </div>
       <div class="listMenu">
         <!-- Food Menu -->
@@ -658,6 +660,41 @@
             <p>Honey | Fresh Lime | Spiced Rum</p>
             <p>&nbsp;</p>
             <p>&nbsp;</p>
+            <div class="subs">
+              <h2>WON’T YOU HAVE SOME CAFFEINNE BEFORE YOU GO ?</h2>
+              <p>
+                The naturally-occurring substance with a bitter taste stimulates
+                the central nervous system, making you feel more alert. In
+                moderate doses, it can actually offer health benefits, including
+                boosts to memory, concentration and mental health. And coffee in
+                particular, a major source of caffeine for Indonesians, has been
+                associated with a host of body perks including a possible
+                decreased risk of Alzheimer’s disease and certain cancers.
+              </p>
+            </div>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <h3>MBC Cafetini <span>185K</span></h3>
+            <p>
+              Espresso | Sugar Syrup | Branca Mentha | Spiced Rum | Chocolate
+              Liqueur
+            </p>
+            <h3>Cafe Nelson <span>185K</span></h3>
+            <p>Bailey’s | Frangelico | Americano | Whipped Cream</p>
+            <h3>French Coffee <span>185K</span></h3>
+            <p>Grand Marnier | Cognac | Americano | Whipped Cream</p>
+            <h3>Irish Coffee <span>185K</span></h3>
+            <p>Americano | Brown Sugar | Irish Whisky | Whipped Cream</p>
+            <h3>Cafe’cabana <span>185K</span></h3>
+            <p>
+              Tia Maria | Jamaican rum | Americano | Brown Sugar | Whipped Cream
+            </p>
+            <h3>Espresso Martini <span>185k</span></h3>
+            <p>Espresso | Sugar | Kahlua | Vodka</p>
+            <h3>Pharmaceutical Stimulant <span>185K</span></h3>
+            <p>Espresso | Ginger Honey Syrup | Cardamom Vodka</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
             <p class="tax">All prices are exclusive tax & service charge</p>
           </div>
         </div>
@@ -813,6 +850,376 @@
             <p>By Bottle</p>
             <h3>Tenjaku-Pure Malt Whiskey <span>3000K</span></h3>
             <p>By Bottle</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p class="tax">All prices are exclusive tax & service charge</p>
+          </div>
+        </div>
+        <div class="beer">
+          <div class="menu">
+            <h1>Beer</h1>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <h3>Prost Lager <span>60K</span></h3>
+            <p>By Bottle</p>
+            <h3>Konig Ludwig Weissbier <span>85K</span></h3>
+            <p>By Bottle</p>
+            <h3>Bintang <span>70K</span></h3>
+            <p>By Bottle</p>
+            <h3>Bintang Raddler Lemon <span>70K</span></h3>
+            <p>By Bottle</p>
+            <h3>Anker <span>60K</span></h3>
+            <p>By Bottle</p>
+            <h3>San Miguel Light <span>75K</span></h3>
+            <p>By Bottle</p>
+            <h3>Heineken <span>90K</span></h3>
+            <p>By Bottle</p>
+            <h3>Guinness <span>95K</span></h3>
+            <p>By Bottle</p>
+            <h3>Corona <span>170K</span></h3>
+            <p>By Bottle</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <h1>Soju</h1>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <h3>Cheong Chun Original <span>215K</span></h3>
+            <p>By Bottle</p>
+            <h3>Cheong Chun Peach <span>215K</span></h3>
+            <p>By Bottle</p>
+            <h3>Cheong Chun Lime <span>215K</span></h3>
+            <p>By Bottle</p>
+            <h3>Cheong Chun Grape <span>215K</span></h3>
+            <p>By Bottle</p>
+            <h3>Cheong Chun Strawberry <span>215K</span></h3>
+            <p>By Bottle</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p class="tax">All prices are exclusive tax & service charge</p>
+          </div>
+        </div>
+        <div class="vodka">
+          <div class="menu">
+            <h1>Vodka</h1>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <div class="subs">
+              <h2>
+                Money, Like Vodka, Turns a Person Into An eccentric. Anton
+                Chekhov
+              </h2>
+            </div>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <h3>Grey Goose <span>2700K</span></h3>
+            <p>By Bottle</p>
+            <h3>Grey Goose <span>120K</span></h3>
+            <p>By Glass</p>
+            <h3>Belvedere <span>2900K</span></h3>
+            <p>By Bottle</p>
+            <h3>Belvedere <span>150K</span></h3>
+            <p>By Glass</p>
+            <h3>Ketel One <span>2500K</span></h3>
+            <p>By Bottle</p>
+            <h3>Ketel One <span>120K</span></h3>
+            <p>By Glass</p>
+            <h3>Ciroc <span>3700K</span></h3>
+            <p>By Bottle</p>
+            <h3>Haku <span>3200K</span></h3>
+            <p>By Bottle</p>
+            <h3>Skyy Vodka <span>1600K</span></h3>
+            <p>By Bottle</p>
+            <h3>Skyy Vodka <span>80K</span></h3>
+            <p>By Glass</p>
+            <h3>Absolut <span>1600K</span></h3>
+            <p>By Bottle</p>
+            <h3>Absolut <span>80K</span></h3>
+            <p>By Glass</p>
+            <h3>Smirnoff Red <span>1500K</span></h3>
+            <p>By Bottle</p>
+            <h3>Smirnoff Red <span>80K</span></h3>
+            <p>By Glass</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p class="tax">All prices are exclusive tax & service charge</p>
+          </div>
+        </div>
+        <div class="gin">
+          <div class="menu">
+            <h1>Gin</h1>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <div class="subs">
+              <h2>
+                The Gin & Tonic Has Save More Englishmen's Lives, and Mind's
+                Than All The Doctors In The Empire. Winston Churcill
+              </h2>
+              <p>&nbsp;</p>
+              <p>&nbsp;</p>
+              <h2>Bourbon</h2>
+            </div>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <h3>Tanqueray <span>1800K</span></h3>
+            <p>By Bottle</p>
+            <h3>Tanqueray <span>85K</span></h3>
+            <p>By Glass</p>
+            <h3>Tanqueray 10 <span>4600K</span></h3>
+            <p>By Bottle</p>
+            <h3>Hendrick's <span>2900K</span></h3>
+            <p>By Bottle</p>
+            <h3>Hendrick's <span>150K</span></h3>
+            <p>By Glass</p>
+            <h3>Bombay Saphire <span>1900K</span></h3>
+            <p>By Bottle</p>
+            <h3>Bombay Saphire <span>90K</span></h3>
+            <p>By Glass</p>
+            <h3>Roku Gin <span>2200K</span></h3>
+            <p>By Bottle</p>
+            <h3>Roku Gin <span>115K</span></h3>
+            <p>By Glass</p>
+            <h3>Monkey 47 <span>3100K</span></h3>
+            <p>By Bottle</p>
+            <h3>MOM God Save The Gin <span>2700K</span></h3>
+            <p>By Bottle</p>
+            <h3>East Indies Archipelago Dry Gin <span>1500K</span></h3>
+            <p>By Bottle</p>
+            <h3>East Indies Archipelago Dry Gin <span>80K</span></h3>
+            <p>By Glass</p>
+            <h3>East Indies Pomelo Pink Gin <span>1500K</span></h3>
+            <p>By Bottle</p>
+            <h3>East Indies Pomelo Pink Gin <span>80K</span></h3>
+            <p>By Glass</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p class="tax">All prices are exclusive tax & service charge</p>
+          </div>
+        </div>
+        <div class="rum">
+          <div class="menu">
+            <h1>Rum</h1>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <div class="subs">
+              <h2>
+                Don't Die of Love in Heave Above or Hell, They'll Not Endure
+                You, Why Look So Glum When Doctor Rum is Waiting for to Cure You
+                ?
+              </h2>
+            </div>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <h3>The Kraken - Black Spiced Rum <span>1900K</span></h3>
+            <p>By Bottle</p>
+            <h3>Black Tears - Cuban Spiced Rum <span>1600K</span></h3>
+            <p>By Bottle</p>
+            <h3>Black Tears - Cuban Spiced Rum <span>80K</span></h3>
+            <p>By Glass</p>
+            <h3>Sailor Jerry - Spiced Rum <span>2200K</span></h3>
+            <p>By Bottle</p>
+            <h3>Diplomatico 8 yo - Mantuano <span>2300K</span></h3>
+            <p>By Bottle</p>
+            <h3>Diplomatio 12 yo - Exclusive Reserva <span>3300K</span></h3>
+            <p>By Bottle</p>
+            <h3>Ron Zacapa 23 yo - Centenario <span>6300K</span></h3>
+            <p>By Bottle</p>
+            <h3>Havana Club 7 Anos <span>2000K</span></h3>
+            <p>By Bottle</p>
+            <h3>Havana Club 7 Anos <span>100K</span></h3>
+            <p>By Glass</p>
+            <h3>Havana Club 3 Anos <span></span>1700K</h3>
+            <p>By Bottle</p>
+            <h3>Havana Club 3 Anos <span>85K</span></h3>
+            <p>By Bottle</p>
+            <h3>Appleton Estate - Signature Blend <span>2600K</span></h3>
+            <p>By Bottle</p>
+            <h3>Bacardi Carta Blanca <span>1600K</span></h3>
+            <p>By Bottle</p>
+            <h3>Bacardi Carta Blanca <span>75K</span></h3>
+            <p>By Glass</p>
+            <h3>Bacardi Spiced <span>1600K</span></h3>
+            <p>By Bottle</p>
+            <h3>Bacardi Spice <span>75K</span></h3>
+            <p>By Glass</p>
+            <h3>Nusa Cana Light Rum <span>1600K</span></h3>
+            <p>By Bottle</p>
+            <h3>Nusa Cana Light Rum <span>75K</span></h3>
+            <p>By Glass</p>
+            <h3>Nusa Cana Spiced Rum <span>1600K</span></h3>
+            <p>By Bottle</p>
+            <h3>Nusa Cana Spiced Rum <span>75K</span></h3>
+            <p>By Glass</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p class="tax">All prices are exclusive tax & service charge</p>
+          </div>
+        </div>
+        <div class="tequila">
+          <div class="menu">
+            <h1>Tequila</h1>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <div class="subs">
+              <h2>
+                I'm Well Aware I'm not Everyone's Cup of Tea ... I'd Rather be
+                Someone's Shot of Tequila Anyway
+              </h2>
+            </div>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <h3>Herradura Plata <span>2.800K</span></h3>
+            <p>By Bottle</p>
+            <h3>Herradura Reposado <span>3600K</span></h3>
+            <p>By Bottle</p>
+            <h3>Espolon Blanco <span>2.800K</span></h3>
+            <p>By Bottle</p>
+            <h3>Espolon Reposado <span>3.200K</span></h3>
+            <p>By Bottle</p>
+            <h3>Jose Cuervo Silver <span>1.900K</span></h3>
+            <p>By Bottle</p>
+            <h3>Jose Cuervo Silver <span>98K</span></h3>
+            <p>By Glass</p>
+            <h3>Jose Cuervo Reposado <span>1.900K</span></h3>
+            <p>By Bottle</p>
+            <h3>Jose Cuervo Reposado <span>98K</span></h3>
+            <p>By Glass</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <div class="subs">
+              <h2>Cognac | Brandy | Grappa | Port</h2>
+            </div>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <h3>Martell VSOP Red Barrel <span>5.600K</span></h3>
+            <p>By Bottle</p>
+            <h3>Remy Martin VSOP <span>4.700K</span></h3>
+            <p>By Bottle</p>
+            <h3>Hennessy VSOP <span>4.300K</span></h3>
+            <p>By Bottle</p>
+            <h3>Hennessy XO <span>11.000K</span></h3>
+            <p>By Bottle</p>
+            <h3>ST. Remy VSOP <span>1.800K</span></h3>
+            <p>By Bottle</p>
+            <h3>ST. Remy VSOP <span>85K</span></h3>
+            <p>By Glass</p>
+            <h3>Beehive VSOP <span>1.800K</span></h3>
+            <p>By Bottle</p>
+            <h3>Beehive VSOP <span>85K</span></h3>
+            <p>By Glass</p>
+            <h3>Alexander Grappa Bianca <span>2.700K</span></h3>
+            <p>By Bottle</p>
+            <h3>Alexander Grappa Bianca <span>142K</span></h3>
+            <p>By Glass</p>
+            <h3>Sandeman Port Fine Tawny <span>1.400K</span></h3>
+            <p>By Bottle</p>
+            <h3>Sandeman Port Fine Tawny <span>80K</span></h3>
+            <p>By Glass</p>
+            <h3>Sandeman Port Fine Ruby <span>1.400K</span></h3>
+            <p>By Bottle</p>
+            <h3>Sandeman Port Fine Ruby <span>80K</span></h3>
+            <p>By Glass</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <div class="subs">
+              <h2>Vermouth | Bitters | Anise</h2>
+            </div>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <h3>Martini Extra Dry <span>1.900K</span></h3>
+            <p>By Bottle</p>
+            <h3>Martini Extra Dry <span>110K</span></h3>
+            <p>By Glass</p>
+            <h3>Martini Bianco <span>1.900K</span></h3>
+            <p>By Bottle</p>
+            <h3>Martini Bianco <span>110K</span></h3>
+            <p>By Glass</p>
+            <h3>Martini Rosso <span>1.900K</span></h3>
+            <p>By Bottle</p>
+            <h3>Martini Rossi <span>110K</span></h3>
+            <p>By Glass</p>
+            <h3>Campari <span>2.200K</span></h3>
+            <p>By Bottle</p>
+            <h3>Campari <span>110K</span></h3>
+            <p>By Glass</p>
+            <h3>Aperol <span>1.800K</span></h3>
+            <p>By Bottle</p>
+            <h3>Aperol <span>110K</span></h3>
+            <p>By Glass</p>
+            <h3>Ricard <span>2.100K</span></h3>
+            <p>By Bottle</p>
+            <h3>Ricard <span>110K</span></h3>
+            <p>By Glass</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <div class="subs">
+              <h2>Liquer</h2>
+            </div>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <h3>Amaretto Disaronno <span>2.100K</span></h3>
+            <p>By Bottle</p>
+            <h3>Amaretto Disarono <span>139K</span></h3>
+            <p>By Glass</p>
+            <h3>Absinthe <span>1.800K</span></h3>
+            <p>By Bottle</p>
+            <h3>Absinthe <span>117K</span></h3>
+            <p>By Glass</p>
+            <h3>Bailey's Irish Cream <span>1.900K</span></h3>
+            <p>By Bottle</p>
+            <h3>Bailey Irish Cream <span>123K</span></h3>
+            <p>By Glass</p>
+            <h3>Cointreau <span>1.900K</span></h3>
+            <p>By Bottle</p>
+            <h3>Cointreau <span>123K</span></h3>
+            <p>By Glass</p>
+            <h3>Chambord <span>1.800K</span></h3>
+            <p>By Bottle</p>
+            <h3>Chambord <span>117K</span></h3>
+            <p>By Glass</p>
+            <h3>Fernet Branca <span>1.800K</span></h3>
+            <p>By Bottle</p>
+            <h3>Fernet Branca <span>117K</span></h3>
+            <p>By Glass</p>
+            <h3>Branca Mentha <span>1.800K</span></h3>
+            <p>By Bottle</p>
+            <h3>Branca Mentha <span>117K</span></h3>
+            <p>By Glass</p>
+            <h3>Jagermeister <span>1.800K</span></h3>
+            <p>By Bottle</p>
+            <h3>Jagermeister <span>117K</span></h3>
+            <p>By Glass</p>
+            <h3>Midori <span>1.800K</span></h3>
+            <p>By Bottle</p>
+            <h3>Midori <span>117K</span></h3>
+            <p>By Glass</p>
+            <h3>Malibu <span>1.800K</span></h3>
+            <p>By Bottle</p>
+            <h3>Malibu <span>117K</span></h3>
+            <p>By Glass</p>
+            <h3>Sambuca <span>1.800K</span></h3>
+            <p>By Bottle</p>
+            <h3>Sambuca <span>117K</span></h3>
+            <p>By Glass</p>
+            <h3>Frangelico <span>2.200K</span></h3>
+            <p>By Bottle</p>
+            <h3>Frangelico <span>145K</span></h3>
+            <p>By Glass</p>
+            <h3>Drambuie <span>2.200K</span></h3>
+            <p>By Bottle</p>
+            <h3>Drambuie <span>145K</span></h3>
+            <p>By Glass</p>
+            <h3>Kahlua <span>1.800K</span></h3>
+            <p>By Bottle</p>
+            <h3>Kahlua <span>117K</span></h3>
+            <p>By Glass</p>
+            <h3>Grand Marnier <span>2.200K</span></h3>
+            <p>By Bottle</p>
+            <h3>Grand Marnier <span>117K</span></h3>
+            <p>By Glass</p>
+            <h3>Benedictine DOM <span>3.000K</span></h3>
+            <p>By Bottle</p>
+            <h3>Benedictine DOM <span>198K</span></h3>
+            <p>By Glass</p>
             <p>&nbsp;</p>
             <p>&nbsp;</p>
             <p class="tax">All prices are exclusive tax & service charge</p>
